Update to folder org

--- a/favoritespots/lares.html
+++ b/favoritespots/lares.html
@@ -27,78 +27,51 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Breads</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/dinnerrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/dinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
+      <h5 class="py-3 mb-0">Los Angeles</h5>
+      <!-- <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/favoritespots/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/dinnerrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
+              <a href="/favoritespots/restaurants" class="tstbite-category-title">Restaurants</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/biscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Biscuits">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+              <a href="/categories/healthierdesserts" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/loafbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/loafbread.jpg" class="w-100" alt="Loaf Bread">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/loafbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Loaf Bread</a>
+              <a href="/categories/breads" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/bars" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+              <a href="/categories/bars" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cinnamonrolls.JPG" class="w-100" alt="Cinnamon Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
+      </div> -->
     </section>
   </div>
-
-  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
-    <div class="container">
-    </div>
-  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
