--- a/favoritespots/arizonares.html
+++ b/favoritespots/arizonares.html
@@ -27,78 +27,51 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Other</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creampuffsother.jpg" class="w-100" alt="Cream Puffs">
+      <h5 class="py-3 mb-0">Arizona</h5>
+      <!-- <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/favoritespots/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
+              <a href="/favoritespots/restaurants" class="tstbite-category-title">Restaurants</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/crepes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/palacinke.jpg" class="w-100" alt="Crepes">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/crepes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crepes</a>
+              <a href="/categories/healthierdesserts" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pancakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pancakes.jpg" class="w-100" alt="Pancakes">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/pancakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fluffy Pancakes</a>
+              <a href="/categories/breads" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/bars" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+              <a href="/categories/bars" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/fudgefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/fudgefrosting.jpg" class="w-100" alt="Fudge Frosting">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/fudgefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fudge Frosting</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creamcheesefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creamcheesefrosting.jpg" class="w-100" alt="Cream Cheese Frosting">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/creamcheesefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Cheese Frosting</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
+      </div> -->
     </section>
   </div>
-
-  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
-    <div class="container">
-    </div>
-  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
