--- a/favoritespots/etc.html
+++ b/favoritespots/etc.html
@@ -27,59 +27,13 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Bars</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/butterbars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-
+      <h5 class="py-3 mb-0"><a href="/favoritespots/sandiegores" style="color: #FF6330">San Diego</a></h5>
+      <h5 class="py-3 mb-0"><a href="/favoritespots/vegasres" style="color: #FF6330">Las Vegas</a></h5>
+      <h5 class="py-3 mb-0"><a href="/favoritespots/newyorkres" style="color: #FF6330">New York</a></h5>
+      <h5 class="py-3 mb-0"><a href="/favoritespots/arizonares" style="color: #FF6330">Arizona</a></h5>
+      <h5 class="py-3 mb-0"><a href="/favoritespots/lares" style="color: #FF6330">Los Angeles</a></h5>
     </section>
   </div>
-
-  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
-    <div class="container">
-    </div>
-  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
