--- a/favoritespots/food.html
+++ b/favoritespots/food.html
@@ -27,68 +27,51 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Healthier Desserts</h5>
+      <h5 class="py-3 mb-0">Food</h5>
       <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/sourcherrystrudel" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/favoritespots/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/restaurant.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
+              <a href="/favoritespots/restaurants" class="tstbite-category-title">Restaurants</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/desserts.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
+              <a href="/categories/healthierdesserts" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/meringues" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/meringues.jpg" class="w-100" alt="Meringues">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/bakeries.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
+              <a href="/categories/breads" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/hazelnuttruffles" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/categories/bars" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/other.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/recipes/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
+              <a href="/categories/bars" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
       </div>
     </section>
   </div>
-
-  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
-    <div class="container">
-    </div>
-  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
