--- a/favoritespots/restaurants.html
+++ b/favoritespots/restaurants.html
@@ -27,58 +27,13 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cookies</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/mnmcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
+      <h5 class="py-3 mb-0"><a href="/favoritespots/sandiegores" style="color: #FF6330">San Diego</a></h5>
+      <h5 class="py-3 mb-0"><a href="/favoritespots/vegasres" style="color: #FF6330">Las Vegas</a></h5>
+      <h5 class="py-3 mb-0"><a href="/favoritespots/newyorkres" style="color: #FF6330">New York</a></h5>
+      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Arizona</a></h5>
+      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Los Angeles</a></h5>
     </section>
   </div>
-
-  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
-    <div class="container">
-    </div>
-  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
